--- a/source/index.html
+++ b/source/index.html
@@ -203,17 +203,17 @@
         </div>
       </section>
 
-      <section class="juri-swiper">
-        <h2 class="juri-title">Жюри</h2>
-        <div class="juri-container container">
+      <section class="jury-swiper">
+        <h2 class="jury-title">Жюри</h2>
+        <div class="jury-container container">
           <button class="swiper-button-prev button" data-swiper="button-prev">
             <svg width="18" height="34">
               <use href="img/sprite.svg#arrow"></use>
             </svg>
           </button>
-          <div class="swiper" data-swiper="juri">
+          <div class="swiper" data-swiper="jury">
             <div class="swiper-wrapper">
-              <div class="swiper-slide juri-slide">
+              <div class="swiper-slide jury-slide">
                 <picture>
                   <source type="image/webp" media="(max-width: 767px)"
                     srcset="img/swiper-slide-1-mobile.webp 1x, img/swiper-slide-1-mobile@2x.webp 2x">
@@ -226,9 +226,18 @@
                   <img class="swiper__image" src="img/swiper-slide-1-desktop.png" alt=""
                     srcset="img/swiper-slide-1-desktop@2x.png 2x" width="260" height="294">
                 </picture>
-                <span class="swiper-name">Анна Павлова</span>
+                <span class="jury-swiper-name">Анна Павлова</span>
+                <div class="jury-slide-overlay">
+                  <h4>Анна Павлова</h4>
+                  <span>Плавание</span>
+                  <ul>
+                    <li>Certified Level 5 Trainer</li>
+                    <li>Золотая медаль на Олимпийских играх </li>
+                    <li>Опыт — 7 лет</li>
+                  </ul>
+                </div>
               </div>
-              <div class="swiper-slide juri-slide">
+              <div class="swiper-slide jury-slide">
                 <picture>
                   <source type="image/webp" media="(max-width: 767px)"
                     srcset="img/swiper-slide-2-mobile.webp 1x, img/swiper-slide-2-mobile@2x.webp 2x">
@@ -241,9 +250,18 @@
                   <img class="swiper__image" src="img/swiper-slide-2-desktop.png" alt=""
                     srcset="img/swiper-slide-2-desktop@2x.png 2x" width="260" height="294">
                 </picture>
-                <span class="swiper-name">Алексей Лавров</span>
+                <span class="jury-swiper-name">Алексей Лавров</span>
+                <div class="jury-slide-overlay">
+                  <h4>Алексей Лавров</h4>
+                  <span>Powerlifting</span>
+                  <ul>
+                    <li>Certified Level 3 Trainer</li>
+                    <li>Мистер Олимпия 2020</li>
+                    <li>Опыт — 8 лет</li>
+                  </ul>
+                </div>
               </div>
-              <div class="swiper-slide juri-slide">
+              <div class="swiper-slide jury-slide">
                 <picture>
                   <source type="image/webp" media="(max-width: 767px)"
                     srcset="img/swiper-slide-3-mobile.webp 1x, img/swiper-slide-3-mobile@2x.webp 2x">
@@ -256,9 +274,18 @@
                   <img class="swiper__image" src="img/swiper-slide-3-desktop.png" alt=""
                     srcset="img/swiper-slide-3-desktop@2x.png 2x" width="260" height="294">
                 </picture>
-                <span class="swiper-name">Александр Пашков</span>
+                <span class="jury-swiper-name">Александр Пашков</span>
+                <div class="jury-slide-overlay">
+                  <h4>Александр Пашков</h4>
+                  <span>CrossFit</span>
+                  <ul>
+                    <li>Certified Level 3 Trainer</li>
+                    <li>Победитель чемпионата России по CrossFit </li>
+                    <li>Опыт — 6 лет</li>
+                  </ul>
+                </div>
               </div>
-              <div class="swiper-slide juri-slide">
+              <div class="swiper-slide jury-slide">
                 <picture>
                   <source type="image/webp" media="(max-width: 767px)"
                     srcset="img/swiper-slide-4-mobile.webp 1x, img/swiper-slide-4-mobile@2x.webp 2x">
@@ -271,9 +298,18 @@
                   <img class="swiper__image" src="img/swiper-slide-4-desktop.png" alt=""
                     srcset="img/swiper-slide-4-desktop@2x.png 2x" width="260" height="294">
                 </picture>
-                <span class="swiper-name">Мария Кетова</span>
+                <span class="jury-swiper-name">Мария Кетова</span>
+                <div class="jury-slide-overlay">
+                  <h4>Мария Кетова</h4>
+                  <span>CrossFit</span>
+                  <ul>
+                    <li>Certified Level 5 Trainer</li>
+                    <li>Лучшая в своем деле</li>
+                    <li>Опыт — 6 лет</li>
+                  </ul>
+                </div>
               </div>
-              <div class="swiper-slide juri-slide">
+              <div class="swiper-slide jury-slide">
                 <picture>
                   <source type="image/webp" media="(max-width: 767px)"
                     srcset="img/swiper-slide-1-mobile.webp 1x, img/swiper-slide-1-mobile@2x.webp 2x">
@@ -286,9 +322,18 @@
                   <img class="swiper__image" src="img/swiper-slide-1-desktop.png" alt=""
                     srcset="img/swiper-slide-1-desktop@2x.png 2x" width="260" height="294">
                 </picture>
-                <span class="swiper-name">Мария Васильева</span>
+                <span class="jury-swiper-name">Мария Васильева</span>
+                <div class="jury-slide-overlay">
+                  <h4>Мария Васильева</h4>
+                  <span>Йога</span>
+                  <ul>
+                    <li>Certified Level 3 Trainer</li>
+                    <li>Учитель года 2021</li>
+                    <li>Опыт — 9 лет</li>
+                  </ul>
+                </div>
               </div>
-              <div class="swiper-slide juri-slide">
+              <div class="swiper-slide jury-slide">
                 <picture>
                   <source type="image/webp" media="(max-width: 767px)"
                     srcset="img/swiper-slide-2-mobile.webp 1x, img/swiper-slide-2-mobile@2x.webp 2x">
@@ -301,9 +346,18 @@
                   <img class="swiper__image" src="img/swiper-slide-2-desktop.png" alt=""
                     srcset="img/swiper-slide-2-desktop@2x.png 2x" width="260" height="294">
                 </picture>
-                <span class="swiper-name">Дмитрий Шолохов</span>
+                <span class="jury-swiper-name">Дмитрий Шолохов</span>
+                <div class="jury-slide-overlay">
+                  <h4>Дмитрий Шолохов</h4>
+                  <span>Легкая Атлетика</span>
+                  <ul>
+                    <li>Certified Level 6 Trainer</li>
+                    <li>победитель чемпионата Казахстана 2022</li>
+                    <li>Опыт — 4 года</li>
+                  </ul>
+                </div>
               </div>
-              <div class="swiper-slide juri-slide">
+              <div class="swiper-slide jury-slide">
                 <picture>
                   <source type="image/webp" media="(max-width: 767px)"
                     srcset="img/swiper-slide-3-mobile.webp 1x, img/swiper-slide-3-mobile@2x.webp 2x">
@@ -316,9 +370,18 @@
                   <img class="swiper__image" src="img/swiper-slide-3-desktop.png" alt=""
                     srcset="img/swiper-slide-3-desktop@2x.png 2x" width="260" height="294">
                 </picture>
-                <span class="swiper-name">Олег Симонов</span>
+                <span class="jury-swiper-name">Олег Симонов</span>
+                <div class="jury-slide-overlay">
+                  <h4>Олег Симонов</h4>
+                  <span>Джиу-джитсу</span>
+                  <ul>
+                    <li>Certified Level 5 Trainer</li>
+                    <li>3ех кратный победитель чемпионата в Тайланде</li>
+                    <li>Опыт — 6 лет</li>
+                  </ul>
+                </div>
               </div>
-              <div class="swiper-slide juri-slide">
+              <div class="swiper-slide jury-slide">
                 <picture>
                   <source type="image/webp" media="(max-width: 767px)"
                     srcset="img/swiper-slide-4-mobile.webp 1x, img/swiper-slide-4-mobile@2x.webp 2x">
@@ -331,7 +394,16 @@
                   <img class="swiper__image" src="img/swiper-slide-4-desktop.png" alt=""
                     srcset="img/swiper-slide-4-desktop@2x.png 2x" width="260" height="294">
                 </picture>
-                <span class="swiper-name">Александра Костылева</span>
+                <span class="jury-swiper-name">Анна Костылева</span>
+                <div class="jury-slide-overlay">
+                  <h4>Анна Костылева</h4>
+                  <span>Рукопашный бой</span>
+                  <ul>
+                    <li>Certified Level 5 Trainer</li>
+                    <li>Краповый берет с 2015</li>
+                    <li>Опыт — 6 лет</li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
@@ -636,7 +708,6 @@
             </div>
           </div>
       </section>
-
     </main>
     <footer>
       <div class="footer__container container">
