--- a/source/index.html
+++ b/source/index.html
@@ -479,7 +479,7 @@
               <h4>Год</h4>
               <span>4999</span>
               <p>Безлимитный абонемент в тренажерный зал</p>
-              <button class="promo__button promo__button--white button">подробнее</button>
+              <a class="promo__button promo__button--white button" href="#">подробнее</a>
             </div>
             <picture>
               <source type="image/webp" media="(max-width: 767px)"
@@ -498,12 +498,12 @@
             <div class="promo__offer">
               <h4>Месяц бесплатно</h4>
               <p>Приведи друга, получи абонемент в подарок</p>
-              <button class="promo__button promo__button--dark button">подробнее</button>
+              <a class="promo__button promo__button--dark button" type="button" href="#">подробнее</a>
             </div>
             <div class="promo__offer">
               <h4>Скидка 20%</h4>
               <p>Корпоративный фитнес с командой</p>
-              <button class="promo__button promo__button--dark button">подробнее</button>
+              <a class="promo__button promo__button--dark button" href="#">подробнее</a>
             </div>
           </div>
         </div>
@@ -514,7 +514,8 @@
         <div class="faq__container container">
           <div class="faq__tabs">
             <div class="faq__tabs-controls" data-tabs="controls">
-              <button class="faq__tab-control button is-selected" type="button" data-target="center">Центр</button>
+              <button class="faq__tab-control  faq__tab-control--is-selected button" type="button"
+                data-target="center">Центр</button>
               <button class="faq__tab-control button" type="button" data-target="subscription">Абонемент</button>
               <button class="faq__tab-control button" type="button" data-target="services">Услуги</button>
               <button class="faq__tab-control button" type="button" data-target="rules">Правила</button>
@@ -524,8 +525,9 @@
             <ul>
               <li>
                 <h5>Как стать членом фитнес-центра?</h5>
-                <button class="faq__button button">Открытая информацию</button>
-                <p>При первом посещении и покупке абонемента, необходимо заполнить анкету и подписать договор. При
+                <button class="faq__button button is-opened" data-target="is-opened">Открытая информацию</button>
+                <p data-target="is-opened">При первом посещении и покупке абонемента, необходимо заполнить анкету и
+                  подписать договор. При
                   покупке абонемента онлайн, анкета также заполняется онлайн и договор придет вам на почту.</p>
               </li>
               <li>
@@ -640,8 +642,13 @@
       </section>
 
       <section class="reviews-swiper">
+        <h2 class="swiper-title">Отзывы</h2>
         <div class="reviews-container container">
-          <h2 class="swiper-title">Отзывы</h2>
+          <button class="swiper-button-prev button" data-swiper="button-prev">
+            <svg width="18" height="34">
+              <use href="img/sprite.svg#arrow"></use>
+            </svg>
+          </button>
           <div class="swiper" data-swiper="review">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
@@ -680,116 +687,100 @@
                 </div>
               </div>
             </div>
-            <div class="swiper-button-next" data-swiper="button-next">
-              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="34" viewBox="0 0 18 34" fill="none">
-                <path d="M1 1L17 17L1 33" stroke="#102654" />
-              </svg>
-            </div>
-            <div class="swiper-button-prev" data-swiper="button-prev">
-              <svg xmlns="http://www.w3.org/2000/svg" width="26" height="42" viewBox="0 0 26 42" fill="none">
-                <g filter="url(#filter0_d_1_211)">
-                  <path d="M21 1L5 17L21 33" stroke="#102654" />
-                </g>
-                <defs>
-                  <filter id="filter0_d_1_211" x="0.292969" y="0.646484" width="25.0605" height="40.707"
-                    filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-                      result="hardAlpha" />
-                    <feOffset dy="4" />
-                    <feGaussianBlur stdDeviation="2" />
-                    <feComposite in2="hardAlpha" operator="out" />
-                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0" />
-                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_1_211" />
-                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_1_211" result="shape" />
-                  </filter>
-                </defs>
-              </svg>
-            </div>
           </div>
+          <button class="swiper-button-next button" data-swiper="button-next">
+            <svg width="18" height="34">
+              <use href="img/sprite.svg#arrow"></use>
+            </svg>
+          </button>
+        </div>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <div class="footer__container container">
         <h2 class="visually-hidden">Контактная информация</h2>
-        <form class="footer__form" action="https://echo.htmlacademy.ru/" autocomplete="off"
-          data-form-validate="data-form-validate" data-callback="base" data-parent-validate="base"
-          data-message-base="Заполните все данные" data-message-extra="Неверный ввод данных">
-          <h3>Бесплатное занятие</h3>
-          <div class="footer__input-wrapper">
-            <label>
-              <input class="footer__form-input" type="text" name="name" required placeholder="Имя">
-              <span>ошибка</span>
-            </label>
-            <label>
-              <input class="footer__form-input" type="tel" name="phone" data-validate-type="phone"
+        <div class="footer__form-container form-container" data-form-validate="data-form-validate">
+          <form action="https://echo.htmlacademy.ru/" autocomplete="off" method="post">
+            <h3>Бесплатное занятие</h3>
+            <div class="form-container__input-container">
+              <div class="form-container__input-wrapper" required placeholder="Имя" data-validate-type="text"
+                data-limitation="name" data-message-base="Поле обязательно к заполнению"
+                data-message-extra="Проверьте корректность заполнения поля" data-required="data-required">
+                <label>
+                  <input class="form-container__input" type="text" name="name" placeholder="Имя">
+                </label>
+              </div>
+              <div class="form-container__input-wrapper" data-validate-type="phone"
                 data-on-input-validate="data-on-input-validate" data-message-base="Поле обязательно к заполнению"
                 data-message-extra="Проверьте корректность заполнения поля" data-message-success="Поле заполнено верно"
                 data-required="data-required">
-              <span>ошибка</span>
-            </label>
-          </div>
-          <button class="footer__form-button button" type="submit">Отправить</button>
-        </form>
-        <div class="footer__contacts contacts">
-          <h3 class="contacts__header">Контакты</h3>
-          <div class="contacts__text-wrapper">
-            <ul class="contacts__list">
-              <li class="contacts__item">
-                <h4 class="contacts__title">Адрес:</h4>
-                <p class="contacts__description">г. Омск, ул. 60 лет Октября, 7</p>
-              </li>
-              <li class="contacts__item">
-                <h4 class="contacts__title">Телефон:</h4>
-                <p class="contacts__description">8-800-555-55-55</p>
-              </li>
-              <li class="contacts__item">
-                <h4 class="contacts__title">График работы:</h4>
-                <p class="contacts__description">Пн-Вс: с 8:00 до 22:00</p>
-              </li>
-              <li class="contacts__item">
-                <h4 class="contacts__title">Email:</h4>
-                <p class="contacts__description">omsk@supergym.ru</p>
-              </li>
-            </ul>
-          </div>
+                <label>
+                  <input class="form-container__input" type="tel" name="phone">
+                </label>
+              </div>
+            </div>
+              <button class="form-container__button button" type="submit">Отправить</button>
+          </form>
         </div>
-        <nav class="footer__nav nav">
-          <span class="nav__title">Supergym</span>
-          <ul class="nav__user-list">
-            <li class="nav__user-item"><a class="nav__user-link" href="#">Услуги</a></li>
-            <li class="nav__user-item"><a class="nav__user-link" href="#">Абонементы</a></li>
-            <li class="nav__user-item"><a class="nav__user-link" href="#">Акции</a></li>
-            <li class="nav__user-item"><a class="nav__user-link" href="#">Тренеры</a></li>
-            <li class="nav__user-item"><a class="nav__user-link" href="#">Расписание</a></li>
-          </ul>
-          <ul class="nav__social-list socials">
-            <li class="socials__item"><a class="socials__link" href="#">
-                <span class="visually-hidden">Vkontakte.</span>
-                <svg class="socials__icon" width="25" height="25">
-                  <use href="img/sprite.svg#vk-logo"></use>
-                </svg>
-              </a>
+      <div class="footer__contacts contacts">
+        <h3 class="contacts__header">Контакты</h3>
+        <div class="contacts__text-wrapper">
+          <ul class="contacts__list">
+            <li class="contacts__item">
+              <h4 class="contacts__title">Адрес:</h4>
+              <p class="contacts__description">г. Омск, ул. 60 лет Октября, 7</p>
             </li>
-            <li class="socials__item"><a class="socials__link" href="#">
-                <span class="visually-hidden">Odnoklassniki.</span>
-                <svg class="socials__icon" width="25" height="25">
-                  <use href="img/sprite.svg#ok-logo"></use>
-                </svg>
-              </a>
+            <li class="contacts__item">
+              <h4 class="contacts__title">Телефон:</h4>
+              <p class="contacts__description">8-800-555-55-55</p>
             </li>
-            <li class="socials__item"><a class="socials__link" href="#">
-                <span class="visually-hidden">Reddit.</span>
-                <svg class="socials__icon" width="25" height="25">
-                  <use href="img/sprite.svg#reddit-logo"></use>
-                </svg>
-              </a>
+            <li class="contacts__item">
+              <h4 class="contacts__title">График работы:</h4>
+              <p class="contacts__description">Пн-Вс: с 8:00 до 22:00</p>
+            </li>
+            <li class="contacts__item">
+              <h4 class="contacts__title">Email:</h4>
+              <p class="contacts__description">omsk@supergym.ru</p>
             </li>
           </ul>
-        </nav>
-
+        </div>
       </div>
-    </footer>
+      <nav class="footer__nav nav">
+        <span class="nav__title">Supergym</span>
+        <ul class="nav__user-list">
+          <li class="nav__user-item"><a class="nav__user-link" href="#">Услуги</a></li>
+          <li class="nav__user-item"><a class="nav__user-link" href="#">Абонементы</a></li>
+          <li class="nav__user-item"><a class="nav__user-link" href="#">Акции</a></li>
+          <li class="nav__user-item"><a class="nav__user-link" href="#">Тренеры</a></li>
+          <li class="nav__user-item"><a class="nav__user-link" href="#">Расписание</a></li>
+        </ul>
+        <ul class="nav__social-list socials">
+          <li class="socials__item"><a class="socials__link" href="#">
+              <span class="visually-hidden">Vkontakte.</span>
+              <svg class="socials__icon" width="25" height="25">
+                <use href="img/sprite.svg#vk-logo"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="socials__item"><a class="socials__link" href="#">
+              <span class="visually-hidden">Odnoklassniki.</span>
+              <svg class="socials__icon" width="25" height="25">
+                <use href="img/sprite.svg#ok-logo"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="socials__item"><a class="socials__link" href="#">
+              <span class="visually-hidden">Reddit.</span>
+              <svg class="socials__icon" width="25" height="25">
+                <use href="img/sprite.svg#reddit-logo"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+  </div>
+  </footer>
   </div>
   <script src="js/vendor.min.js"></script>
   <script src="js/main.min.js"></script>
